<resources>
    <string name="app_name">DatabaseDemo</string>
    <string name="first_name_et">First Name</string>
    <string name="last_name_et">Last Name</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="show_all_button">Show All</string>
    <string name="delete_all_button">Delete All</string>
    <string name="id_tv">ID</string>
    <string name="first_tv">First</string>
    <string name="last_tv">Last</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
