<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nguyen.databasedemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/firstNameET"
                style="@style/MyTextView.EditText"
                android:hint="@string/first_name_et">
                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lastNameET"
                style="@style/MyTextView.EditText"
                android:hint="@string/last_name_et">
                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addButton"
            style="@style/MyTextView.Button"
            android:text="@string/add_button"
            android:onClick="addClick"/>

        <Button
            android:id="@+id/deleteButton"
            style="@style/MyTextView.Button"
            android:text="@string/delete_button"
            android:onClick="deleteClick"/>

        <Button
            android:id="@+id/showAllButton"
            style="@style/MyTextView.Button"
            android:text="@string/show_all_button"
            android:onClick="showAllClick"/>

        <Button
            android:id="@+id/deleteAllButton"
            style="@style/MyTextView.Button"
            android:text="@string/delete_all_button"
            android:onClick="deleteAllClick"/>
    </LinearLayout>
</ScrollView>
